z-index case study media fixed

--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ a {
     width: 45%;
     margin-left: auto;
     margin-right: auto;
-    z-index: 9000;
+    z-index: 999;
 }
 
 #media-content img, #media-content video {
